--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,25 @@
 <div class="background">
     <div class="backbox">
         <div class="headerlist">
-            <span style="font-size: 20px; font-weight: 800; letter-spacing: -1px;cursor: pointer;"
-                routerLink="/list">shophub</span>
-            <span class="headerlist-menu">
+            <div routerLink="/list" class="logo">
+                <span class="ball">
+                    <div class="square" style="opacity: 0.3;"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                </span>
+                <span class="typo center">shophub</span>
+            </div>
+            <div class="headerlist-menu center">
                 <span>Home</span>
                 <span>Shop</span>
                 <span>Blog</span>
                 <span>Contact</span>
-            </span>
-            <span style="display: flex; gap: 10px; align-items: center">
-                <span style="font-size: 12px"></span>
-                <span class="cart-circle material-icons center" style="font-size: 25px"
-                    [routerLink]="'/cart'">shopping_cart</span>
-            </span>
+            </div>
+            <div class="cart-button">
+                <span class="total-cart" *ngIf="totalCart>0">{{totalCart}}</span>
+                <span class="cart-circle material-icons center" [routerLink]="'/cart'">local_mall</span>
+            </div>
         </div>
         <div class="orange-box">
             <div class="center">
