--- a/src/app/pages/product-list/product-list.component.scss
+++ b/src/app/pages/product-list/product-list.component.scss
@@ -2,48 +2,61 @@
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
-  bottom: 170px;
-  left: 60px;
-  height: 250%;
+  margin-top: 20px;
   width: 100%;
-  overflow-x: auto;
+  height: 610px;
+  overflow: auto;
   justify-content: center;
 }
 
-
-
 .header-orange-box {
-  padding: 0px 30px 30px 30px;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: 700;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  top: -25px;
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 1145px;
 
   .showing-filter {
     display: flex;
     gap: 10px;
+    align-items: center;
+    justify-content: end;
   }
 }
 
 .home-product {
   display: flex;
   gap: 3px;
+  align-items: center;
 }
 
 .shop-header {
   font-weight: 700;
-  top: -73px;
-  font-size: 20px;
-  position: relative;
+  font-size: 30px;
   letter-spacing: -1px;
-  position: relative;
 }
 
 .center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+:host ::ng-deep {
+  .mat-form-field.mat-focused.mat-primary .mat-select-arrow {
+    color: #ff6b01;
+  }
+
+  .mat-form-field.mat-focused .mat-form-field-ripple {
+    background-color: #ff6b01;
+  }
+
+  .mat-select-trigger {
+    color: #ff6b01;
+  }
+}
+
+.related-product {
+  font-size: 26px;
+  margin-left: 10px;
 }
