--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,13 @@
 .background {
-  background: orange;
+  background: url("/assets/background.svg");
+  background-size: cover;
   width: 100%;
   height: 100%;
+  min-width: 1000px;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .material-icons {
@@ -18,29 +23,77 @@
 .backbox {
   background: #ffebc1;
   margin: 30px;
-  border-radius: 30px;
+  border-radius: 50px;
   width: calc(100% - 70px);
+  max-width: 1445px;
   height: calc(100% - 70px);
   position: relative;
+  border: 4px solid #ffffff5e;
+  box-shadow: inset 0 0 0px 3px #ffffff;
 
   .headerlist {
     padding: 30px 50px 30px 50px;
     font-weight: 700;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    .logo {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      .typo {
+        font-size: 28px;
+        font-weight: 800;
+        letter-spacing: -1px;
+        cursor: pointer;
+      }
+
+      .ball {
+        height: 50px;
+        width: 50px;
+        border-radius: 100%;
+        background: #ffedc7;
+        box-shadow: inset 0 0 10px 0px #ffffffc4;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 17px 7px 7px 17px;
+        .square {
+          height: 4px;
+          width: 4px;
+          background: black;
+        }
+      }
+    }
 
     .headerlist-menu {
       display: flex;
       gap: 15px;
-      font-size: 12px;
+      font-size: 16px;
     }
 
     .cart-circle {
-      width: 40px;
-      height: 40px;
-      border-radius: 30px;
-      background: #fef3d5;
+      height: 50px;
+      width: 50px;
+      border-radius: 100%;
+      background: #ffedc7;
+      box-shadow: inset 0 0 10px 0px #ffffffc4;
+      font-size: 22px;
+      cursor: pointer;
+    }
+    .cart-button {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .total-cart {
+        background: #fdb619;
+        border-radius: 100%;
+        height: 22px;
+        width: 22px;
+        display: grid;
+        place-items: center;
+        position: relative;
+        bottom: 15px;
+        left: 55px;
+      }
     }
   }
 }
@@ -75,10 +128,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.background {
-  background: orange;
-  width: 100%;
-  height: 100%;
-  position: absolute;
 }
