--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,8 +1,8 @@
 <div class="pattern-dot">
     <div class="card">
         <div class="buttons">
-            <i class="material-icons form-icon icon " [routerLink]="'/detail/'+product.url">fullscreen</i>
-            <i class="material-icons form-icon icon " (click)="addToCart(product)">shopping_cart</i>
+            <i class="material-icons form-icon icon " (click)="openProduct(product.url)">fullscreen</i>
+            <i class="material-icons form-icon icon " (click)="addToCart(product)">local_mall</i>
         </div>
         <div class="img-product">
             <div class="img-background">
